@@ -12,6 +12,8 @@
 - bugfix in IOS Memory for ASR 9000 image and reserved pool
 - bugfix in cisco wlc status
 - add hardware-health for cisco pix
+- add mode supportedmibs
+- last fallback alarm-mib for ios without envmon-mib
 
 2014-02-07 2.6.5.2
 - add another cisco unified communication model
